--- a/front-end/src/components/css/sidebar.css
+++ b/front-end/src/components/css/sidebar.css
@@ -1,21 +1,42 @@
 #container_nav_bar {
-    background-color: hsl(0, 0%, 92%);
+    background-color: hsl(0, 0%, 30%);
     width: 300px;
     height: 100%;
     float: left;
     padding: 0;
     padding-top: 10px;
     text-align: center;
+    border-right: 1px hsl(0, 0%, 33%);
 }
 
-Button {
-    background-color:hsl(0, 0%, 92%) !important;
+.unselected {
+    background-color:hsl(0, 0%, 30%) !important;
+    border: 0 !important;
+    color: rgb(255, 255, 255) !important;
+    width: 90%;
+    margin-bottom: 5px;
+    font-weight: bold;
+    text-align: left;
+    letter-spacing: 1px;
+}
+
+.selected {
+    background-color:hsl(0, 0%, 81%) !important;
     border: 0 !important;
     color: black !important;
     width: 90%;
     margin-bottom: 5px;
+    font-weight: bold;
+    text-align: left;
+    letter-spacing: 1px;
 }
 
 Button:hover {
     background-color: hsl(0, 0%, 81%) !important;
+    color: black !important;
+}
+
+Button:focus {
+    outline: none !important;
+    box-shadow: none !important;
 }
