made navbar prettier

--- a/front-end/src/app.css
+++ b/front-end/src/app.css
@@ -4,6 +4,9 @@
 }
 
 #container_content {
+    background-color: pink;
     width: 100%;
     float: left;
+    margin-left: 100px;
+    margin-top: 50px;
 }
