--- a/front-end/src/components/css/sidebar.css
+++ b/front-end/src/components/css/sidebar.css
@@ -1,37 +1,45 @@
 #container_nav_bar {
+    display: flex !important;
     background-color: hsl(0, 0%, 30%);
     width: 300px;
     height: 100%;
     float: left;
     padding: 0;
-    padding-top: 10px;
-    text-align: center;
+    align-items: center !important;
     border-right: 1px hsl(0, 0%, 33%);
+}
+
+#stack_menu {
+    display: flex;
+    align-items: center;
+    margin: auto;
+}
+
+.menu_item {
+    display: inline-flex;
+    border: 0 !important;
+    width: 90%;
+    height: fit-content;
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center left;
+    align-items: center;
+    letter-spacing: 1px;
 }
 
 .unselected {
     background-color:hsl(0, 0%, 30%) !important;
-    border: 0 !important;
     color: rgb(255, 255, 255) !important;
-    width: 90%;
-    height: fit-content;
-    margin-bottom: 5px;
-    font-weight: bold;
-    text-align: left;
-    letter-spacing: 1px;
-
 }
 
 .selected {
     background-color:hsl(0, 0%, 81%) !important;
-    border: 0 !important;
     color: black !important;
-    width: 90%;
-    height: fit-content;
-    margin-bottom: 5px;
-    font-weight: bold;
-    text-align: left;
-    letter-spacing: 1px;
+}
+
+.menu_item_icon {
+    width: 15%;
+    margin-right: 10px;
 }
 
 Button:hover {
