--- a/front-end/src/components/css/sidebar.css
+++ b/front-end/src/components/css/sidebar.css
@@ -1,7 +1,9 @@
 #container_nav_bar {
-    display: flex !important;
-    background-color: hsl(0, 0%, 30%);
-    width: 300px;
+    display: flex;
+    background-color:#000021;
+    width: 20vw;
+    min-width: 200px;
+    max-width: 300px;
     height: 100%;
     float: left;
     padding: 0;
@@ -12,7 +14,14 @@
 #stack_menu {
     display: flex;
     align-items: center;
-    margin: auto;
+}
+
+#icon {
+    display: flex;
+    width: 150px;
+    margin: 0 !important;
+    margin-bottom: 100px !important;
+    margin-top: 40px !important;
 }
 
 .menu_item {
@@ -20,7 +29,6 @@
     border: 0 !important;
     width: 90%;
     height: fit-content;
-    font-weight: bold;
     font-size: 20px;
     text-align: center left;
     align-items: center;
@@ -28,7 +36,7 @@
 }
 
 .unselected {
-    background-color:hsl(0, 0%, 30%) !important;
+    background-color: #000021 !important;
     color: rgb(255, 255, 255) !important;
 }
 
