--- a/front-end/src/app.css
+++ b/front-end/src/app.css
@@ -8,6 +8,7 @@
     width: 100%;
     height: 100%;
     padding-left: 100px;
+    margin-left: 16%;
     padding-top: 50px;
     max-width:none;
 }
