--- a/front-end/src/app.css
+++ b/front-end/src/app.css
@@ -5,10 +5,11 @@
 }
 
 #container_content {
+    background-color: pink;
     width: 100%;
     height: 100%;
     padding-left: 100px;
-    margin-left: 16%;
+    margin-left: 15%;
     padding-top: 50px;
     max-width:none;
 }
