--- a/front-end/src/app.css
+++ b/front-end/src/app.css
@@ -7,7 +7,7 @@
 #container_content {
     width: 100%;
     height: 100%;
-    padding-left: 100px;
+    padding: auto;
     margin-left: 15%;
     padding-top: 50px;
     max-width:none;
