--- a/front-end/src/components/css/sidebar.css
+++ b/front-end/src/components/css/sidebar.css
@@ -19,7 +19,7 @@
 
 #icon {
     display: flex;
-    width: 150px;
+    width: 60%;
     margin: 0 !important;
     margin-bottom: 100px !important;
     margin-top: 40px !important;
