--- a/front-end/src/components/css/sidebar.css
+++ b/front-end/src/components/css/sidebar.css
@@ -1,12 +1,11 @@
 #container_nav_bar {
     display: flex;
     background-color:#000021;
-    width: 15%;
-    min-width: 200px;
-    max-width: 350px;
+    width: 250px;
     height: 100%;
     float: left;
     padding: 0;
+    margin: 0;
     align-items: center !important;
     border-right: 1px hsl(0, 0%, 33%);
     position: fixed !important;
