fileio changes + dropbutton for sidebar

--- a/front-end/src/components/css/sidebar.css
+++ b/front-end/src/components/css/sidebar.css
@@ -12,8 +12,11 @@
 }
 
 #stack_menu {
+    width: 100%;
     display: flex;
-    align-items: center;
+    align-items: center !important;
+    margin: 0;
+    padding: 0;
 }
 
 #icon {
@@ -24,8 +27,20 @@
     margin-top: 40px !important;
 }
 
+#container_dropdown_button {
+    height: fit-content;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+#container_dropdown_item {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .menu_item {
-    display: inline-flex;
     border: 0 !important;
     width: 90%;
     height: fit-content;
