--- a/front-end/src/components/css/FileIO.css
+++ b/front-end/src/components/css/FileIO.css
@@ -29,6 +29,8 @@
     float: left;
     margin: 0 !important;
     padding: 0 !important;
+    align-items: center;
+    text-align: center;
 }
 
 #container_summary {
@@ -41,6 +43,5 @@
 .actionButton {
     width: 20%;
     margin: 0;
-    margin-top: 30px;
     align-self: center;
 }
